fixed blog app to work with new proj layout

--- a/dbe/templates/blog/bbase.html
+++ b/dbe/templates/blog/bbase.html
@@ -5,7 +5,7 @@
 <head>
     <title>{% block title %}Blog{% endblock %}</title>
     {% block extrahead %}{% endblock %}
-    <link rel="stylesheet" href="/media/css/blog.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/static/css/blog.css" type="text/css" media="screen" charset="utf-8" />
 
 </head>
 
@@ -24,7 +24,7 @@
                 <h3>MyBlog</h3>
                 {% if user.is_staff %}
                     <a href="{% url 'admin:index' %}">Admin</a>
-                    <a href="{% url 'admin:blog_post_add' %}">Add post</a>
+                    <a href="{% url 'admin:blog_blogpost_add' %}">Add post</a>
                 {% endif %}
 
             {% endblock %}
