--- a/dbe/templates/blog/list.html
+++ b/dbe/templates/blog/list.html
@@ -1,7 +1,7 @@
 {% extends "bbase.html" %}
 
 {% block extrahead %}
-    <link rel="stylesheet" href="/media/css/blog.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/static/css/blog.css" type="text/css" media="screen" charset="utf-8" />
 {% endblock %}
 
 <!-- SIDEBAR -->
@@ -22,7 +22,7 @@
 
 {% block content %}
     <div class="main">
-            {% for post in post_list %}
+            {% for post in blogpost_list %}
                 <div class="title">{{ post.title }}</div>
                 <ul>
                     <div class="time">{{ post.created }}</div>
