fixed forum app

--- a/dbe/templates/forum/thread.html
+++ b/dbe/templates/forum/thread.html
@@ -14,7 +14,7 @@
         <!-- Posts  -->
 
         <div id="list">
-            {% for post in post_list %}
+            {% for post in forumpost_list %}
                 <div class="post">
 
                     <!-- Profile pic and info -->
