--- a/dbe/templates/forum/fbase.html
+++ b/dbe/templates/forum/fbase.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>{% block title %}ForumApp{% endblock %}</title>
-    <link rel="stylesheet" href="/media/css/forum.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/static/css/forum.css" type="text/css" media="screen" charset="utf-8" />
 </head>
 
 <body>
