fixed portfolio; added readme

--- a/dbe/templates/portfolio/slideshow.html
+++ b/dbe/templates/portfolio/slideshow.html
@@ -2,7 +2,7 @@
 
 {% block extrahead %}
     <script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/media/js/slides.min.jquery.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/static/js/slides.min.jquery.js"></script>
     <script>
       $(function(){
         $("#slides").slides({
