--- a/dbe/templates/questionnaire/qbase.html
+++ b/dbe/templates/questionnaire/qbase.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>{% block title %}Questionnaires{% endblock %}</title>
-    <link rel="stylesheet" href="/media/css/quest.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/static/css/quest.css" type="text/css" media="screen" charset="utf-8" />
     {% block extrahead %}{% endblock %}
 </head>
 
