--- a/dbe/templates/portfolio/add_images.html
+++ b/dbe/templates/portfolio/add_images.html
@@ -1,5 +1,5 @@
 {% extends "ptfbase.html" %}
-{% load todo %}
+{% load dbetags %}
 
 {% block extrahead %}
     <style type="text/css" media="screen">
